# Expense-Tracker

./: .gitignore  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml
Prototyping/: aitab.py  app.py  dailytab.py  layout.py  prototype.py
sample_data/: chase_sample.csv  mid_data.csv  small_data.csv
scripts/: ollama-entrypoint.sh
src/: app.py  expense_manager.py  layout.py  user_management.py
src/tabs/: aitab.py  dailytab.py  distributiontab.py  expensecolumn.py  time_plot.py
src/util/: constants.py
test/: test_expense_loader.py  test_expense_manager.py  test_main.py
