[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "Expense tracking software"
authors = ["Justin Blain",
           "Kayla Reynnells",
           "Mary Shultz <mary.e.shultz@gmail.com>",
           "Kirtan Thakar",
           "Mark Truitt"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
